# compa-claudio

./: .gitignore  index.html  package-lock.json  package.json
design/character/: atlas.json
src/: chat.ts  look-at-menu.ts  main.ts  mascot.ts  onboarding.ts  personalities.ts  settings.ts  sprite.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  events.rs  lib.rs  main.rs  overlay.rs
src-tauri/src/backends/: claude_cli.rs  mock.rs  mod.rs  ollama.rs
src-tauri/src/capture/: macos.rs  mod.rs  stub.rs
src-tauri/src/context/: macos.rs  mod.rs  stub.rs
src-tauri/src/sensors/: accessibility.rs  mod.rs
